Sat Feb 14 15:36:31 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/analysis.aspx:

          . Removed the border from the unit test chart.

Sat Feb 14 15:29:53 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/assemblies/CUTS.Web/CUTS/Web/UI/UnitTest/UnitTest.cs:
        * utils/BMW/assemblies/CUTS.Web/CUTS/Web/UI/UnitTest/UnitTestPackage.cs:
        * utils/BMW/assemblies/CUTS.Web/CUTS/Web/UI/UnitTest/UnitTestSuite.cs:
        * utils/BMW/website/analysis.aspx:
        * utils/BMW/website/analysis.aspx.cs:

          . Added support for charting a unit test's data trend.

        * utils/BMW/website/unittestchart.aspx:
        * utils/BMW/website/unittestchart.aspx.cs:

          Removed these files.

Sat Feb 14 08:02:06 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/SQL/CUTS-unittest.sql:

          . Bug fix where the stored procedure responsible for reading
            the test suite manifest was not up-to-date with the new
            database layout.

Sat Feb 14 07:47:25 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/website/unittest.aspx.cs:

          . Finally removed all code related to the deleted file below.

        * utils/BMW/website/App_Code/UnitTestActions.cs:

          Removed this file.

Sat Feb 14 07:34:01 UTC 2009  James H. Hill  <hillj@isis.vanderbilt.edu>

        * utils/BMW/SQL/CUTS-unittest.sql:
        * utils/BMW/assemblies/CUTS.BMW/CUTS/BMW/Database.cs:
        * utils/BMW/website/analysis.aspx.cs:
        * utils/BMW/website/logformats.aspx.cs:
        * utils/BMW/website/unittest.aspx:
        * utils/BMW/website/unittest.aspx.cs:

          . Changed the test suite specification such that test packages
            can not be shared between test suite. Instead, they are
            solely used for grouping related unit tests in a test suite.

          . Cleaned up a LOT of old/stale code.
